3.10.1 - bolts folder